--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,149 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
+
+body {
+  font-family: Poppins, sans-serif;
+  background-color: #000;
+  color: white;
+  /* height: 2000px; */
+}
+
+/* navbar */
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  position: fixed;
+  z-index: 9999;
+  background-color: transparent;
+  top: 0;
+  left: 0;
+  padding: 1.5rem 8%;
+}
+
+.nav-title {
+  display: flex;
+  align-items: center;
+}
+
+.nav-title a {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-decoration: none;
+  color: white;
+}
+.nav-title a span {
+  color: #ffd000;
+}
+
+.nav-list ul {
+  display: flex;
+  gap: 3rem;
+  list-style: none;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: white;
+  font-weight: 300;
+  transition: background-color 0.3s ease;
+  padding: 0.5rem 1rem;
+  border-radius: 30px;
+}
+
+.nav-link:hover {
+  color: #ffd000;
+}
+
+/* navbar */
+
+/* main */
+
+main {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+#home {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+  background-image: url(../assets/home-bg.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.home-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0 8%;
+  gap: 2rem;
+  flex: 1;
+}
+
+.content-text {
+  flex: 2.5;
+}
+
+.content-text h1 {
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 4rem;
+}
+
+.content-text p {
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.7rem;
+}
+
+.content-text a {
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+}
+
+.content-img {
+  position: relative;
+  flex: 1.5;
+  display: flex;
+}
+.content-img img {
+  object-fit: cover;
+  object-position: center;
+  display: block;
+  box-shadow: -10px 10px 10px 1px #ffd000;
+  width: 23rem;
+  height: 32rem;
+  border-radius: 10px;
+}
+.content-img img:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease-in-out;
+}
+
+.sosmed {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  right: 0;
+  padding: 1.5rem 2rem;
+}
+.sosmed a {
+  font-size: 1.5rem;
+  color: white;
+}
+
+/* main */
