--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: Poppins, sans-serif;
+  font-family: Montserrat, sans-serif;
   background-color: #000;
   color: white;
   /* height: 2000px; */
@@ -31,6 +31,7 @@ body {
 .nav-title {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .nav-title a {
@@ -42,6 +43,28 @@ body {
 .nav-title a span {
   color: #ffd000;
 }
+.nav-title a span::before {
+  content: "lgy";
+  color: white;
+  display: none;
+  transition: 0.3s ease-in-out;
+  margin-right: 0.5rem;
+}
+.nav-title a span::after {
+  content: "g";
+  display: none;
+  transition: 0.3s ease-in-out;
+}
+
+.nav-title a span:hover::before {
+  color: white;
+  display: inline-block;
+  transition: 0.3s ease-in-out;
+}
+.nav-title a span:hover::after {
+  display: inline-block;
+  transition: 0.3s ease-in-out;
+}
 
 .nav-list ul {
   display: flex;
@@ -50,12 +73,33 @@ body {
 }
 
 .nav-link {
+  font-family: Poppins, sans-serif;
+
   text-decoration: none;
   color: white;
   font-weight: 300;
-  transition: background-color 0.3s ease;
+
   padding: 0.5rem 1rem;
   border-radius: 30px;
+  position: relative;
+}
+
+.nav-link::after {
+  content: "";
+  display: block;
+  height: 2px;
+  background-color: #ffd000;
+  width: 0;
+  transition: width 0.3s ease;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: fade-in-out 2s infinite;
+}
+
+.nav-link:hover::after {
+  width: 50%;
 }
 
 .nav-link:hover {
@@ -95,14 +139,35 @@ main {
 
 .content-text {
   flex: 2.5;
-  border-left: 2px solid white;
   padding: 1rem 1.5rem;
+  position: relative;
+}
+.content-text::before {
+  content: "";
+  display: block;
+  height: 0px;
+  background-color: white;
+  width: 2px;
+  transition: height 0.3s ease;
+  position: absolute;
+  top: 50%;
+  left: -1rem;
+  transform: translateY(-50%);
+  animation: fade-in-out 2s infinite;
+}
+
+.content-text:hover::before {
+  height: 100%;
 }
 
 .content-text h1 {
-  font-size: 3rem;
-  font-weight: 600;
+  font-size: 4rem;
+  font-weight: 700;
   line-height: 4rem;
+  margin-block-end: 1rem;
+}
+.content-text h1 span {
+  color: #ffd000;
 }
 
 .content-text p {
@@ -111,10 +176,26 @@ main {
   line-height: 1.7rem;
 }
 
-.content-text a {
+.content-text .aboutBtn {
   text-decoration: none;
   color: white;
   font-weight: 600;
+  padding: 1rem 2rem;
+  background-color: #444342;
+  display: inline-block;
+  margin-block-start: 1rem;
+  transition: 0.3s ease-in-out;
+  align-items: center;
+  cursor: pointer;
+}
+.content-text .aboutBtn i {
+  margin-inline-start: 0.5rem;
+}
+
+.content-text .aboutBtn:hover {
+  background-color: #2a2929;
+  transition: 0.3s ease-in-out;
+  color: #ffd000;
 }
 
 .content-side {
@@ -130,14 +211,16 @@ main {
   object-fit: cover;
   object-position: center;
   display: block;
-  box-shadow: -10px 10px 10px 1px #ffd000;
+  box-shadow: -10px 10px 10px 1px #ffb700;
   width: 23rem;
   height: 32rem;
   border-radius: 10px;
+  transition: transform 0.5s ease-in-out;
 }
 .content-img img:hover {
   transform: scale(1.05);
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+  box-shadow: -10px 10px 10px 1px #ffd000;
 }
 
 .sosmed {
@@ -148,6 +231,14 @@ main {
 .sosmed a {
   font-size: 1.5rem;
   color: white;
+  text-decoration: none;
+  transition: 0.3s ease-in-out;
+}
+
+.sosmed a:hover {
+  color: #ffd000;
+  transform: scale(1.5);
+  transition: 0.3s ease-in-out;
 }
 
 /* main */
@@ -158,7 +249,7 @@ main {
 
 /* responsive */
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 425px) {
   #home {
     background-image: url(../assets/home-foto.jpg);
   }
@@ -171,10 +262,7 @@ main {
 @media screen and (max-width: 768px) {
 }
 
-@media screen and (max-width: 992px) {
-}
-
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1024px) {
 }
 
 /* responsive */
