--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,19 @@ body {
   color: #ffd000;
 }
 
+.nav-toggle {
+  display: none;
+  cursor: pointer;
+}
+
+.nav-toggle span {
+  font-size: 1.25rem;
+}
+
+.active {
+  top: -10px;
+}
+
 /* navbar */
 
 /* main */
@@ -260,9 +273,30 @@ main {
 }
 
 @media screen and (max-width: 768px) {
+  .nav-list ul {
+    gap: 3rem;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    top: -1000px;
+    background-color: #444342;
+    border-radius: 20px;
+    padding-block: 3rem 2rem;
+  }
+
+  .nav-toggle {
+    display: inline-block;
+  }
 }
 
 @media screen and (max-width: 1024px) {
+  .nav-list ul {
+    gap: 2rem;
+  }
 }
 
 /* responsive */
