--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ body {
 
 /* navbar */
 
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -24,8 +29,8 @@ body {
   z-index: 9999;
   background-color: transparent;
   top: 0;
-  left: 0;
   padding: 1.5rem 8%;
+  max-width: 1440px;
 }
 
 .nav-title {
@@ -66,7 +71,7 @@ body {
   transition: 0.3s ease-in-out;
 }
 
-.nav-list ul {
+.nav-list {
   display: flex;
   gap: 3rem;
   list-style: none;
@@ -79,7 +84,6 @@ body {
   color: white;
   font-weight: 300;
 
-  padding: 0.5rem 1rem;
   border-radius: 30px;
   position: relative;
 }
@@ -88,7 +92,7 @@ body {
   content: "";
   display: block;
   height: 2px;
-  background-color: #ffd000;
+  background-color: white;
   width: 0;
   transition: width 0.3s ease;
   position: absolute;
@@ -115,8 +119,8 @@ body {
   font-size: 1.25rem;
 }
 
-.active {
-  top: -10px;
+.nav-toggle:hover {
+  color: #ffd000;
 }
 
 /* navbar */
@@ -126,13 +130,14 @@ body {
 main {
   display: flex;
   flex-direction: column;
+  gap: 10rem;
   overflow: hidden;
 }
 
 #home {
   display: flex;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   justify-content: center;
   background-image: url(../assets/home-bg.jpg);
   background-size: cover;
@@ -141,18 +146,35 @@ main {
   position: relative;
 }
 
+#home::after {
+  content: "";
+  display: block;
+  height: 20%;
+  background-color: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 25%,
+    rgba(255, 255, 255, 0) 75%
+  );
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
 .home-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 8%;
   gap: 5rem;
-  flex: 1;
+
+  max-width: 1440px;
 }
 
 .content-text {
   flex: 2.5;
-  padding: 1rem 1.5rem;
+
   position: relative;
 }
 .content-text::before {
@@ -164,7 +186,7 @@ main {
   transition: height 0.3s ease;
   position: absolute;
   top: 50%;
-  left: -1rem;
+  left: -2rem;
   transform: translateY(-50%);
   animation: fade-in-out 2s infinite;
 }
@@ -173,28 +195,45 @@ main {
   height: 100%;
 }
 
+.content-text h2 {
+  font-size: 2rem;
+  font-style: italic;
+  font-weight: 600;
+}
+
 .content-text h1 {
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-weight: 700;
-  line-height: 4rem;
   margin-block-end: 1rem;
 }
 .content-text h1 span {
   color: #ffd000;
 }
 
+.content-text h3 {
+  font-size: 1.5rem;
+
+  margin-block-end: 0.5rem;
+}
+
+.content-text h3 span {
+  color: #ffd000;
+}
+
 .content-text p {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: 300;
-  line-height: 1.7rem;
+
+  margin-block-end: 1rem;
 }
 
 .content-text .aboutBtn {
+  font-size: 1.25rem;
   text-decoration: none;
   color: white;
-  font-weight: 600;
-  padding: 1rem 2rem;
-  background-color: #444342;
+  font-weight: 500;
+  padding: 1.5rem 3rem;
+  background-color: #44434262;
   display: inline-block;
   margin-block-start: 1rem;
   transition: 0.3s ease-in-out;
@@ -211,22 +250,13 @@ main {
   color: #ffd000;
 }
 
-.content-side {
-  position: relative;
-  flex: 1.5;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 4rem;
-  order: 1;
-}
 .content-img img {
   object-fit: cover;
   object-position: center;
   display: block;
   box-shadow: -10px 10px 10px 1px #ffb700;
-  width: 23rem;
-  height: 32rem;
+  aspect-ratio: 1.35/2;
+  max-width: 22rem;
   border-radius: 10px;
   transition: transform 0.5s ease-in-out;
 }
@@ -240,9 +270,10 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  order: 2;
 }
 .sosmed a {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: white;
   text-decoration: none;
   transition: 0.3s ease-in-out;
@@ -267,35 +298,124 @@ main {
     background-image: url(../assets/home-foto.jpg);
   }
 
+  .home-content {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-items: flex-start;
+    flex-wrap: nowrap;
+    row-gap: 1rem;
+  }
+
+  .sosmed {
+    padding-right: 0rem;
+  }
+
   .content-img img {
     display: none;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .nav-list ul {
+  .nav-list {
     gap: 3rem;
     flex-direction: column;
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
-    justify-content: center;
+    width: 40%;
+    min-height: 100vh;
+    justify-content: flex-start;
     align-items: center;
-    top: -1000px;
-    background-color: #444342;
+    right: -1000px;
+    background-color: #4443424f;
+    backdrop-filter: blur(15px);
     border-radius: 20px;
-    padding-block: 3rem 2rem;
+    padding-top: 8rem;
   }
 
   .nav-toggle {
     display: inline-block;
+    z-index: 99;
+  }
+
+  .nav-list.active {
+    right: -10px;
+  }
+
+  .home-content {
+    flex-wrap: wrap;
+    row-gap: 1rem;
+    justify-content: flex-end;
+  }
+
+  .content-text h2 {
+    font-size: 1.25rem;
+  }
+
+  .content-text h1 {
+    font-size: 2.5rem;
+  }
+
+  .content-text h3 {
+    font-size: 1rem;
+  }
+
+  .content-text p {
+    font-size: 1rem;
+  }
+
+  .content-text .aboutBtn {
+    font-size: 1rem;
+    padding: 1.25rem 2rem;
+  }
+
+  .sosmed {
+    flex-direction: row;
+    gap: 2rem;
+    padding-right: 1rem;
+  }
+
+  .content-img img {
+    max-height: 20rem;
   }
 }
 
 @media screen and (max-width: 1024px) {
   .nav-list ul {
     gap: 2rem;
+  }
+  .nav-title a {
+    font-size: 1.4rem;
+  }
+  .nav-link {
+    font-size: 0.9rem;
+  }
+
+  .content-text h2 {
+    font-size: 1.5rem;
+  }
+
+  .content-text h1 {
+    font-size: 3rem;
+  }
+
+  .content-text h3 {
+    font-size: 1.25rem;
+  }
+
+  .content-text p {
+    font-size: 1.25rem;
+  }
+
+  .content-text .aboutBtn {
+    font-size: 1rem;
+  }
+
+  .content-img img {
+    max-width: 17rem;
+  }
+
+  .sosmed a {
+    font-size: 1.5rem;
   }
 }
 
