--- a/css/style.css
+++ b/css/style.css
@@ -345,15 +345,14 @@ main {
     flex-direction: column;
     position: absolute;
     top: 4.3rem;
-    width: 40%;
-    height: 40vh;
-    justify-content: flex-start;
+
+    justify-content: center;
     align-items: center;
     right: -1000px;
-    background-color: #3b3b3b85;
+    background-color: #2c2c2cb1;
     backdrop-filter: blur(15px);
     border-radius: 20px 0 20px 0;
-    padding-block: 2rem;
+    padding: 2rem 3rem;
     z-index: 90;
     transition: right 0.5s ease-in-out;
   }
@@ -364,7 +363,7 @@ main {
   }
 
   .nav-list.active {
-    right: 0.3rem;
+    right: 8%;
   }
 
   .content-text {
