--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ main {
 }
 
 .content-text h2 {
-  font-size: 2rem;
+  font-size: 1.75rem;
   font-style: italic;
   font-weight: 600;
 
@@ -213,7 +213,7 @@ main {
 }
 
 .content-text h1 {
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 700;
   margin-block-end: 1rem;
 
@@ -224,7 +224,7 @@ main {
 }
 
 .content-text h3 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 
   text-shadow: 1px 1px 3px rgba(0, 0, 3, 0.5);
   margin-block-end: 0.5rem;
@@ -235,7 +235,7 @@ main {
 }
 
 .content-text p {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 300;
   text-shadow: 1px 1px 3px rgba(0, 0, 3, 1);
 
@@ -243,7 +243,7 @@ main {
 }
 
 .content-text .aboutBtn {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   text-decoration: none;
   color: white;
   font-weight: 500;
@@ -281,7 +281,7 @@ main {
   display: block;
   box-shadow: -10px 10px 10px 1px #ffb700;
   aspect-ratio: 1.35/2;
-  max-width: 22rem;
+  max-width: 20rem;
   border-radius: 10px;
   transition: transform 0.5s ease-in-out;
 }
@@ -298,7 +298,7 @@ main {
   order: 2;
 }
 .sosmed a {
-  font-size: 2rem;
+  font-size: 1.75rem;
   color: white;
   text-decoration: none;
   transition: 0.3s ease-in-out;
@@ -326,7 +326,7 @@ main {
   row-gap: 3rem;
 }
 
-.article-title span {
+.about-title .article-title span {
   color: #ffd000;
 }
 
@@ -339,9 +339,9 @@ main {
   max-width: 1024px;
   gap: 3rem;
   border-radius: 20px;
-  background-color: #44434262;
+  background-color: transparent;
   padding: 3rem;
-  box-shadow: -3px 3px 10px 3px #ffb700;
+  box-shadow: -3px 3px 10px 3px #ffd000;
 }
 
 .profil-bio {
@@ -362,19 +362,59 @@ main {
   transition: transform 0.5s ease-in-out;
 }
 
+.biodata {
+  display: flex;
+  flex-direction: column;
+}
+
+.biodata h3 {
+  display: inline-block;
+  border-bottom: 1px solid #ffd000;
+  padding: 0.5rem;
+}
+
+.biodata p {
+  font-size: 0.875rem;
+  text-align: justify;
+  text-indent: 2rem;
+  line-height: 1.5rem;
+  margin-block: 0 1rem;
+  border-bottom: 1px solid #ffd000;
+  padding: 0.5rem;
+}
+
 .tabel-bio {
   width: 100%;
   border-collapse: collapse;
-  padding: 2rem;
   text-align: left;
-  font-size: 1rem;
+  font-size: 0.75rem;
   font-weight: 400;
+
   tr {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
   td {
     padding: 0.5rem;
   }
+}
+
+.contact-btn {
+  cursor: default;
+}
+.contact-btn span {
+  display: inline-block;
+  margin-block: 1rem;
+  text-decoration: none;
+  color: white;
+  border-radius: 20px;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.8rem;
+  border: 1px solid #ffd000;
+  cursor: pointer;
+}
+
+.contact-btn span:hover {
+  background-color: #44434262;
 }
 
 /* about */
@@ -387,23 +427,50 @@ main {
 
 /* responsive */
 
-@media screen and (max-width: 480px) {
-  #home {
-    background-image: url(../assets/home-foto.jpg);
+@media screen and (max-width: 1024px) {
+  .nav-list ul {
+    gap: 2rem;
+  }
+  .nav-title a {
+    font-size: 1.4rem;
+  }
+  .nav-link {
+    font-size: 0.9rem;
   }
 
-  .home-content {
-    flex-direction: column;
-    align-items: flex-start;
-    row-gap: 0.1rem;
+  .content-text h2 {
+    font-size: 1.25rem;
   }
 
-  .sosmed {
-    padding-right: 0rem;
+  .content-text h1 {
+    font-size: 2.5rem;
+  }
+
+  .content-text h3 {
+    font-size: 1rem;
+  }
+
+  .content-text p {
+    font-size: 1rem;
+
+    margin-block-end: 0.5rem;
+  }
+
+  .content-text .aboutBtn {
+    font-size: 1rem;
+    padding: 1.25rem 2rem;
   }
 
   .content-img img {
-    display: none;
+    max-width: 17rem;
+  }
+
+  .sosmed a {
+    font-size: 1.5rem;
+  }
+
+  .biodata p {
+    font-size: 0.8rem;
   }
 }
 
@@ -417,7 +484,7 @@ main {
     justify-content: center;
     align-items: center;
     right: -1000px;
-    background-color: #2c2c2cb1;
+    background-color: rgba(44, 44, 44, 0.694);
     backdrop-filter: blur(15px);
     border-radius: 20px 0 20px 0;
     padding: 2rem 3rem;
@@ -470,48 +537,56 @@ main {
   .content-img img {
     max-height: 20rem;
   }
-}
 
-@media screen and (max-width: 1024px) {
-  .nav-list ul {
+  .about-content {
+    flex-direction: column;
     gap: 2rem;
   }
-  .nav-title a {
-    font-size: 1.4rem;
-  }
-  .nav-link {
-    font-size: 0.9rem;
+
+  .profil-bio img {
+    max-width: 13rem;
   }
 
-  .content-text h2 {
-    font-size: 1.25rem;
+  .biodata h3 {
+    display: none;
+  }
+  .biodata p {
+    font-size: 0.8rem;
+    border-top: 1px solid #ffd000;
+  }
+  .tabel-bio {
+    font-size: 0.7rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #home {
+    background-image: url(../assets/home-foto.jpg);
   }
 
-  .content-text h1 {
-    font-size: 2.5rem;
+  .home-content {
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 0.1rem;
   }
 
-  .content-text h3 {
-    font-size: 1rem;
-  }
-
-  .content-text p {
-    font-size: 1rem;
-
-    margin-block-end: 0.5rem;
-  }
-
-  .content-text .aboutBtn {
-    font-size: 1rem;
-    padding: 1.25rem 2rem;
+  .sosmed {
+    padding-right: 0rem;
   }
 
   .content-img img {
-    max-width: 17rem;
+    display: none;
   }
 
-  .sosmed a {
-    font-size: 1.5rem;
+  .profil-bio img {
+    max-height: 15rem;
+  }
+
+  .biodata p {
+    font-size: 0.7rem;
+  }
+  .tabel-bio {
+    font-size: 0.6rem;
   }
 }
 
