--- a/css/style.css
+++ b/css/style.css
@@ -459,6 +459,9 @@ main {
 .education-content {
   max-width: 1024px;
   margin-inline: 8%;
+  display: flex;
+  justify-content: space-between;
+  gap: 3rem;
 }
 
 /* education */
