--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   max-width: 1024px;
   margin-inline: 8%;
 }
+
 /* tamplate */
 
 /* navbar */
@@ -156,6 +157,7 @@ header::after {
 main {
   display: flex;
   flex-direction: column;
+  gap: 10rem;
   overflow: hidden;
 }
 
@@ -164,7 +166,7 @@ main {
 #home {
   display: flex;
   align-items: center;
-  min-height: 100vh;
+  min-height: 762px;
   justify-content: center;
   background-image: url(../assets/home-bg.jpg);
   background-size: cover;
@@ -172,6 +174,7 @@ main {
   background-repeat: no-repeat;
   position: relative;
   width: 100%;
+  padding-block: 5rem;
 }
 
 #home::after {
@@ -338,14 +341,18 @@ main {
 #about-me {
   display: flex;
   align-items: center;
-  min-height: 100vh;
+  min-height: 762px;
   justify-content: center;
   flex-direction: column;
   position: relative;
   width: 100%;
   row-gap: 3rem;
+  padding-block: 5rem;
 }
 
+/* .about-title {
+  margin-top: 5rem;
+} */
 .about-title .article-title span {
   color: #ffd000;
 }
@@ -444,12 +451,13 @@ main {
 #education {
   display: flex;
   align-items: center;
-  min-height: 100vh;
+  min-height: 762px;
   justify-content: center;
   flex-direction: column;
   position: relative;
   row-gap: 3rem;
   width: 100%;
+  padding-block: 5rem;
 }
 
 .education-title .article-title span {
@@ -460,8 +468,75 @@ main {
   max-width: 1024px;
   margin-inline: 8%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   gap: 3rem;
+  flex-wrap: wrap;
+}
+
+.education-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  background-color: transparent;
+
+  box-shadow: -2px 2px 10px 3px #2a2929;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.5s ease-in-out;
+  aspect-ratio: 1.4/2;
+  max-width: 18rem;
+  overflow: hidden;
+  gap: 0.5rem;
+}
+
+.education-img {
+  flex: 2;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.education-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 20px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.education-img img:hover {
+  transform: scale(1.05);
+  transition: transform 0.5s ease-in-out;
+}
+
+.education-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.3rem;
+  padding-inline: 1rem;
+  position: relative;
+  background-color: transparent;
+  height: 100%;
+  flex: 1;
+}
+
+.education-info span {
+  position: absolute;
+  padding: 0.4rem 2rem;
+  top: -20%;
+
+  background-color: #ffd000;
+  border-radius: 20px;
+  z-index: 99;
+  border: 0.4rem solid black;
+  display: inline-block;
+}
+
+.education-info h4 {
+  text-align: center;
 }
 
 /* education */
