--- a/css/style.css
+++ b/css/style.css
@@ -540,6 +540,63 @@ main {
   text-align: center;
 }
 
+#hobbies {
+  display: flex;
+  align-items: center;
+  min-height: 762px;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  row-gap: 3rem;
+  width: 100%;
+  padding-block: 5rem;
+}
+
+.hobbies-title span {
+  text-shadow: -4px 4px 5px rgba(255, 196, 0, 0.704);
+}
+
+.hobbies-content {
+  max-width: 1024px;
+  margin-inline: 8%;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 0.1rem;
+  background-color: #ffd000;
+  padding: 0.2rem;
+}
+
+.hobbies-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  flex: 1;
+  overflow: hidden;
+
+  transition: flex-grow 0.5s ease-in-out, filter 1s ease-in-out;
+  filter: grayscale(80%);
+}
+
+.hobbies-item:hover {
+  flex: 3;
+  transition: flex-grow 0.5s ease-in-out, filter 1s ease-in-out;
+  filter: grayscale(0%);
+}
+
+.hobbies-item img {
+  width: 100%;
+  height: 25rem;
+  object-fit: cover;
+  object-position: center;
+}
+
+.hobbies-item h4 {
+  position: absolute;
+  bottom: 1rem;
+}
+
 /* education */
 
 /* main */
@@ -695,6 +752,19 @@ main {
   }
   .tabel-bio {
     font-size: 0.8rem;
+  }
+
+  .hobbies-content {
+    flex-direction: column;
+    max-height: 60vh;
+  }
+
+  .hobbies-item {
+    flex-basis: 100%;
+  }
+
+  .hobbies-item img {
+    width: 84vw;
   }
 }
 
