--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ header {
   z-index: 9999;
   background-color: transparent;
   top: 0;
+
   border-radius: 0 0 10px 10px;
   transition: background-color 0.3s ease-in-out;
 }
@@ -36,7 +37,7 @@ header::after {
   content: "";
   position: absolute;
   top: 0;
-  left: 0;
+
   width: 100%;
   height: 100%;
   background-color: transparent;
@@ -45,6 +46,7 @@ header::after {
 }
 
 .navbar {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -166,7 +168,7 @@ main {
 #home {
   display: flex;
   align-items: center;
-  min-height: 762px;
+  min-height: 100vh;
   justify-content: center;
   background-image: url(../assets/home-bg.jpg);
   background-size: cover;
@@ -341,7 +343,7 @@ main {
 #about-me {
   display: flex;
   align-items: center;
-  min-height: 762px;
+  min-height: 100vh;
   justify-content: center;
   flex-direction: column;
   position: relative;
@@ -366,7 +368,7 @@ main {
   gap: 3rem;
   border-radius: 20px;
   background-color: transparent;
-  padding: 3rem;
+  padding: 2rem 3rem;
   box-shadow: -3px 3px 10px 3px #ffd000;
   margin-inline: 8%;
 }
@@ -451,7 +453,7 @@ main {
 #education {
   display: flex;
   align-items: center;
-  min-height: 762px;
+  min-height: 100vh;
   justify-content: center;
   flex-direction: column;
   position: relative;
@@ -543,7 +545,7 @@ main {
 #hobbies {
   display: flex;
   align-items: center;
-  min-height: 762px;
+  min-height: 100vh;
   justify-content: center;
   flex-direction: column;
   position: relative;
@@ -563,6 +565,7 @@ main {
   justify-content: space-evenly;
   gap: 0.1rem;
   background-color: #ffd000;
+
   padding: 0.2rem;
 }
 
@@ -574,7 +577,7 @@ main {
   position: relative;
   flex: 1;
   overflow: hidden;
-
+  cursor: pointer;
   transition: flex-grow 0.5s ease-in-out, filter 1s ease-in-out;
   filter: grayscale(80%);
 }
@@ -587,7 +590,7 @@ main {
 
 .hobbies-item img {
   width: 100%;
-  height: 25rem;
+  height: 27rem;
   object-fit: cover;
   object-position: center;
 }
@@ -595,6 +598,7 @@ main {
 .hobbies-item h4 {
   position: absolute;
   bottom: 1rem;
+  display: inline;
 }
 
 /* education */
@@ -674,12 +678,12 @@ main {
     -webkit-backdrop-filter: blur(10px);
     border-radius: 0 0 20px 20px;
     padding: 1rem 0;
-    width: 84%;
+    width: 100%;
     z-index: 90;
     transition: top 0.5s ease-in-out;
     overflow: hidden;
     box-shadow: 0px 0px 1px 0.6px #fff;
-    left: 8%;
+    left: 0;
   }
 
   .nav-link {
@@ -754,17 +758,8 @@ main {
     font-size: 0.8rem;
   }
 
-  .hobbies-content {
-    flex-direction: column;
-    max-height: 60vh;
-  }
-
-  .hobbies-item {
-    flex-basis: 100%;
-  }
-
-  .hobbies-item img {
-    width: 84vw;
+  .education-card {
+    max-width: 18rem;
   }
 }
 
@@ -799,6 +794,14 @@ main {
   }
   .contact-btn span {
     font-size: 0.7rem;
+  }
+
+  .hobbies-item:hover {
+    flex: 7;
+  }
+
+  .hobbies-item h4 {
+    font-size: 0.5rem;
   }
 }
 
