--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ header::after {
 main {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   overflow: hidden;
 }
 
@@ -173,7 +173,7 @@ main {
   align-items: center;
   min-height: 100vh;
   justify-content: center;
-  background-image: url(../assets/home-bg.jpg);
+  background-image: url(../assets/bs3.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -233,7 +233,7 @@ main {
 
 .content-text h2 {
   font-size: 1.75rem;
-  font-style: italic;
+
   font-weight: 600;
 
   text-shadow: 1px 1px 3px rgba(0, 0, 3, 0.5);
@@ -353,6 +353,43 @@ main {
   width: 100%;
   row-gap: 3rem;
   padding-block: 5rem;
+
+  background-image: url(../assets/bs5.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#about-me::before {
+  content: "";
+  display: block;
+  height: 10%;
+  background-color: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 25%,
+    rgba(255, 255, 255, 0) 75%
+  );
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+#about-me::after {
+  content: "";
+  display: block;
+  height: 10%;
+  background-color: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 25%,
+    rgba(255, 255, 255, 0) 75%
+  );
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .about-title .article-title span {
@@ -363,14 +400,15 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-
+  position: relative;
   max-width: 1200px;
   gap: 3rem;
   border-radius: 20px;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.452);
   padding: 2rem 3rem;
   box-shadow: -3px 3px 10px 3px #ffd000;
   margin-inline: 8%;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .profil-bio {
@@ -460,6 +498,43 @@ main {
   row-gap: 3rem;
   width: 100%;
   padding-block: 5rem;
+
+  background-image: url(../assets/bs3.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#education::before {
+  content: "";
+  display: block;
+  height: 8%;
+  background-color: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 30%,
+    rgba(255, 255, 255, 0) 75%
+  );
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+#education::after {
+  content: "";
+  display: block;
+  height: 8%;
+  background-color: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 30%,
+    rgba(255, 255, 255, 0) 75%
+  );
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .education-title .article-title span {
@@ -520,7 +595,7 @@ main {
   gap: 0.3rem;
   padding-inline: 1rem;
   position: relative;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.452);
   height: 100%;
   flex: 1;
 }
@@ -556,6 +631,43 @@ main {
   row-gap: 3rem;
   width: 100%;
   padding-block: 5rem;
+
+  background-image: url(../assets/bs5.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#hobbies::before {
+  content: "";
+  display: block;
+  height: 10%;
+  background-color: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 25%,
+    rgba(255, 255, 255, 0) 75%
+  );
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+#hobbies::after {
+  content: "";
+  display: block;
+  height: 10%;
+  background-color: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 25%,
+    rgba(255, 255, 255, 0) 75%
+  );
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .hobbies-title span {
@@ -582,13 +694,13 @@ main {
   flex: 1;
   overflow: hidden;
   cursor: pointer;
-  transition: flex-grow 0.5s ease-in-out, filter 1s ease-in-out;
+  transition: flex-grow 0.5s ease-in-out, filter 0.5s ease-in-out;
   filter: grayscale(80%);
 }
 
 .hobbies-item:hover {
   flex: 3;
-  transition: flex-grow 0.5s ease-in-out, filter 1s ease-in-out;
+  transition: flex-grow 0.5s ease-in-out, filter 0.5s ease-in-out;
   filter: grayscale(0%);
 }
 
