--- a/css/style.css
+++ b/css/style.css
@@ -1188,6 +1188,13 @@ footer {
   .hobbies-item h4 {
     font-size: 0.5rem;
   }
+
+  .email,
+  .phone,
+  .name,
+  .subject {
+    flex-basis: 100%;
+  }
 }
 
 /* responsive */
