--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,7 @@ main {
   line-height: 1.5rem;
   margin-block: 0 1rem;
   border-bottom: 1px solid #ffd000;
-  padding: 0.5rem;
+  padding-block: 0.5rem;
 }
 
 .tabel-bio {
